<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_chat">

    <fragment
        android:id="@+id/navigation_chat"
        android:name="com.forlost.sunflower.ui.main.DialogListFragment"
        android:label="@string/title_chat"
        tools:layout="@layout/dialog_list_fragment" />
    <fragment
        android:id="@+id/navigation_program"
        android:name="com.forlost.sunflower.ui.program.ProgramFragment"
        android:label="@string/title_program"
        tools:layout="@layout/program_fragment" />
    <fragment
        android:id="@+id/navigation_cloudMap"
        android:name="com.forlost.sunflower.ui.cloudMap.CloudMapFragment"
        android:label="@string/title_cloudMap"
        tools:layout="@layout/cloud_map_fragment" />
    <fragment
        android:id="@+id/navigation_cloudBook"
        android:name="com.forlost.sunflower.ui.cloudBook.CloudBookFragment"
        android:label="@string/title_cloudBook"
        tools:layout="@layout/cloud_book_fragment" />
    <fragment
        android:id="@+id/navigation_mine"
        android:name="com.forlost.sunflower.ui.mine.MineFragment"
        android:label="@string/title_mine"
        tools:layout="@layout/mine_fragment" />

</navigation>